# Pixel-Slash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  installer_win.bat  run.bat
data/: coins.json  mobs.json  pillars.json
src/app/: CMakeLists.txt  main.cpp
src/app/include/: Game.hpp  GameScene.hpp  MenuScene.hpp  Scene.hpp  ScoreScene.hpp
src/app/source/: Game.cpp  GameScene.cpp  MenuScene.cpp  Scene.cpp  ScoreScene.cpp
src/asset-handler/: AssetList.hpp  AssetMap.hpp  CMakeLists.txt
src/entities/: CMakeLists.txt
src/entities/include/: Coin.hpp  Entity.hpp  EntityState.hpp  EntitySystem.hpp  LivingEntity.hpp  Mob.hpp  Player.hpp
src/entities/source/: Coin.cpp  Entity.cpp  EntitySystem.cpp  LivingEntity.cpp  Mob.cpp  Player.cpp
src/events/: CMakeLists.txt
src/events/core-events/: KeyPressEvent.hpp  KeyReleaseEvent.hpp  MouseMovedEvent.hpp  MousePressEvent.hpp  MouseReleaseEvent.hpp  UpdateEvent.hpp
src/events/event/: EventManager.hpp
src/events/game-events/: CoinCollectedEvent.hpp  GameWonEvent.hpp  MobKilledEvent.hpp  PlayerDiedEvent.hpp
src/game-components/: CMakeLists.txt
src/game-components/include/: CollisionMap.hpp  GameObject.hpp  Label.hpp  Map.hpp  Particle.hpp  ParticleSet.hpp  ParticleSpread.hpp  PathFinding.hpp  Pillar.hpp  SpawnPoints.hpp  SpriteSet.hpp  Statistics.hpp
src/game-components/source/: CollisionMap.cpp  Label.cpp  Map.cpp  Particle.cpp  ParticleSet.cpp  PathFinding.cpp  Pillar.cpp  SpawnPoints.cpp  SpriteSet.cpp
src/render/: CMakeLists.txt
src/render/include/: RenderPriority.hpp  Renderable.hpp  Renderer.hpp
src/render/source/: Renderer.cpp
src/utilities/: CMakeLists.txt  Constants.hpp  Direction.hpp  FilePath.hpp  Random.hpp
src/widgets/: CMakeLists.txt
src/widgets/include/: ButtonWidget.hpp  TextBox.hpp  Widget.hpp  WidgetBuilder.hpp
src/widgets/source/: ButtonWidget.cpp  TextBox.cpp  WidgetBuilder.cpp
